--- a/product/makeupstyles.css
+++ b/product/makeupstyles.css
@@ -11,7 +11,7 @@ body {
 }
 
 .hero {
-    background: url('https://via.placeholder.com/1920x1080') no-repeat center center/cover;
+    background: url('https://drive.google.com/thumbnail?id=1WlDvmngagLXgo1qMRD-TaENCBkOBemmO') no-repeat center center/cover;
     height: 100vh;
     color: white;
     text-align: center;
